Correct h2 alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -138,6 +138,7 @@ header a {
   grid-column: 1;
   font-size: 0.9em;
   margin: 5px;
+  text-align: left;
 }
 
 .products--sale {
